# fastapi

./: comentários.txt  requirements.txt
autenticação-e-autorização/: .env.example  criar_tabelas.py  main.py  requirements.txt
autenticação-e-autorização/api/v1/: api.py
autenticação-e-autorização/core/: auth.py  configs.py  deps.py
autenticação-e-autorização/models/: artigo_model.py  usuario_model.py
autenticação-e-autorização/schemas/: artigo_schema.py  usuario_schema.py
fastapi + tortoise/: .env.example  requirements.txt
fastapi + tortoise/adapter/: post.py
fastapi + tortoise/adapter/schemas/: post.py
fastapi + tortoise/domain/entities/: post.py
fastapi + tortoise/domain/service/: post.py
fastapi + tortoise/port/factory/: post.py
fastapi + tortoise/port/fastapi/: app.py
rest/: main.py
rest/config/: db.py
rest/models/: students.py
secao02/: main.py
secao03/: main.py  models.py
secao03_p2/: main.py
secao03_p2/routes/: curso_router.py  user_router.py
secao04/: criar_tabelas.py  main.py
secao04/api/v1/: api.py
secao04/core/: configs.py  db.py  deps.py
secao04/models/: curso_model.py
secao04/schemas/: curso_schema.py
secao05/: criar_tabelas.py  main.py  requirements.txt
secao05/api/v1/: api.py
secao05/core/: configs.py  db.py  deps.py
secao05/models/: user_model.py
secao06/: pyproject.toml  requirements.txt
secao06/api/v1/: api.py
secao06/core/: auth.py  configs.py  database.py  security.py
secao06/models/: artigo_model.py
tortoise-ddd/: .env.example  dev.sh
tortoise-ddd/adapter/: post.py
(+10 files in other folders)
