[tool.poetry]
name = "secao06"
version = "0.1.0"
description = ""
authors = ["AngeloCarnevale <angelo.carnevale@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
pymysql = "^1.1.0"
SQLAlchemy = "^2.0.20"
uvicorn = "^0.23.2"
asyncmy = "^0.2.8"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pytz = "^2023.3"
passlib = "^1.7.4"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
